tests/baselines/reference/TwoInternalModulesThatMergeEachWithExportedAndNonExportedClassesOfTheSameName.errors.txt
TwoInternalModulesThatMergeEachWithExportedAndNonExportedClassesOfTheSameName.ts(20,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
TwoInternalModulesThatMergeEachWithExportedAndNonExportedClassesOfTheSameName.ts(20,10): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
TwoInternalModulesThatMergeEachWithExportedAndNonExportedClassesOfTheSameName.ts(20,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== TwoInternalModulesThatMergeEachWithExportedAndNonExportedClassesOfTheSameName.ts (3 errors) ====
    namespace A {
        export class Point {
            x: number;
            y: number;
        }
    }
    
    namespace A {
        class Point {
            fromCarthesian(p: A.Point) {
                return { x: p.x, y: p.y };
            }
        }
    }
    
    // ensure merges as expected
    var p: { x: number; y: number; };
    var p: A.Point;
    
    module X.Y.Z {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
             ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
               ~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class Line {
            length: number;
        }
    }
    
    namespace X {
        export namespace Y {
            export namespace Z {
                class Line {
                    name: string;
                }
            }
        }
    }
    
    // ensure merges as expected
    var l: { length: number; }
    var l: X.Y.Z.Line;
    
    